# memorize-activity

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  README.txt  activity.py  alphasound.memoson  audio.py  autogen.sh  basic.instruments  buddiespanel.py  card.py  cardlist.py  cardtable.py  collabwrapper.py  com.erikos.MemoryGame.service  configure.ac  controller.py  createcardpanel.py  createtable.py  createtoolbar.py  csnd.py  dragtest.py  face.py  fontcombobox.py  game.py  gameobject.py  gameselectview.py  gamestate.py  gridtest.py  gridtest_cs.py  gridtest_gst.py  infopanel.py  memorize.dtd  memorizetoolbar.py  memory.py  memorygame.activity  (+23 more)
Memorize.activity/: audio.py  createcardpanel.py  createtoolbar.py  fontcombobox.py  memorize.dtd  playerscoreboard.py
activity/: activity.info  mimetypes.xml
audio/: Bartok.aiff  Chopin_Walzes_hmoll.aiff  Handel_Messiah.aiff  Makefile.am  Shostakovich_symph10.aiff  Vivaldi_Spring.aiff
csound/: csoundserver.py  univorc.csd
csserver/: Makefile.am  csnd.py  universe.py  univorc.csd
images/: Makefile.am
misc/: addition.mem  drumgit.mem
osc/: Makefile.am  oscAPI.py  oscapi.py  osccore.py
po/: Memorize.pot  ab.po  ach.po  af.po  agr.po  ak.po  am.po  an.po  ar.po  ar_SY.po  arn.po  ast.po  ay.po  ayc.po  aym.po  az.po  be.po  be_Latn.po  bg.po  bi.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  cpp.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  (+104 more)
port/: chooser.py  roundbox.py
sounds/: Bach.aiff  Beethoven_Waldstein.aiff  Makefile.am  (+3 more)
(+216 files in other folders)
