AC_INIT([Memosono],[0.2],[],[memosono])

AC_PREREQ([2.59])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([configure.ac])

AM_INIT_AUTOMAKE([1.9 foreign dist-bzip2 no-dist-gzip])

AM_MAINTAINER_MODE

AM_PATH_PYTHON

AC_OUTPUT([
Makefile
sounds/Makefile
images/Makefile
osc/Makefile
csserver/Makefile
])
