audiodir = $(datadir)/sugar/activities/memorygame/audio
audio_DATA = \
	Bach.aiff \
	Bartok.aiff \
	Beethoven_Waldstein.aiff \
	Chopin_Walzes_hmoll.aiff \
	Debussy_GolliwoggCake_Walk.aiff \
	Handel_Messiah.aiff \
	Mozart_Nachtmusik.aiff \
	Shostakovich_symph10.aiff \
	Stravinsky.wav \
	Tchaikovsky_Nutcracker.aiff \
	Vivaldi_Spring.aiff
