imagesdir = $(datadir)/sugar/activities/memosono/images
images_DATA = \
black80.jpg \
player1_0b.jpg \
player1_0.jpg \
player1_1b.jpg \
player1_1.jpg \
player1_2b.jpg \
player1_2.jpg \
player1_3b.jpg \
player1_3.jpg \
player1_4b.jpg \
player1_4.jpg \
player1_5b.jpg \
player1_5.jpg \
player1_6b.jpg \
player1_6.jpg \
player1_7b.jpg \
player1_7.jpg \
player1_8b.jpg \
player1_8.jpg \
player2_0b.jpg \
player2_0.jpg \
player2_1b.jpg \
player2_1.jpg \
player2_2b.jpg \
player2_2.jpg \
player2_3b.jpg \
player2_3.jpg \
player2_4b.jpg \
player2_4.jpg \
player2_5b.jpg \
player2_5.jpg \
player2_6b.jpg \
player2_6.jpg \
player2_7b.jpg \
player2_7.jpg \
player2_8b.jpg \
player2_8.jpg
